[package]
name = "mastodon-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["http1", "tokio", "tracing", "original-uri"] }
clap = { version = "4.3.19", features = ["derive"] }
hyper = { version = "0.14.27", features = ["client"] }
metrics = "0.21.1"
metrics-exporter-prometheus = { version = "0.12.1", default-features = false, features = ["http-listener"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = "0.4.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
