[workspace]
resolver = "2"
members = [
    "ammonite-backend",
    "ammonite-shell",
]

[workspace.dependencies]
axum = { version = "0.6.19", default-features = false }
clap = { version = "4.3.19", default-features = false }
hyper = { version = "0.14.27" }
metrics = "0.21.1"
metrics-exporter-prometheus = { version = "0.12.1", default-features = false }
tokio = "1.34.0"
tower = { version = "0.4.13", default-features = false }
tower-http = "0.4.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false }
