[package]
name = "ammonite-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["http1", "tokio", "tracing"] }
clap = { workspace = true, features = ["derive", "std"] }
hyper = { workspace = true, features = ["client"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true, default-features = false, features = ["http-listener"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "tracing-log"] }
